[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/character_squareRed.png" type="Texture" id=1]
[ext_resource path="res://Character/EnemyRanged.gd" type="Script" id=2]
[ext_resource path="res://Assets/item_blaster.png" type="Texture" id=3]
[ext_resource path="res://Assets/impactPlate_medium_001.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 24 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 41
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Weapon" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Weapon"]
position = Vector2( 40, 8 )
texture = ExtResource( 3 )

[node name="ProjectilePosition" type="Position2D" parent="Weapon"]
position = Vector2( 64, 8 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Weapon"]
stream = ExtResource( 4 )

[node name="DirectionTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true
[connection signal="timeout" from="DirectionTimer" to="." method="_on_DirectionTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
